Make form 'fixed' using overflow: hidden while trips container scrolls to circumvent form being shortened on larger screens

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,7 +22,7 @@ header {
 main {
   display: flex;
   width: 100%;
-  /* height: 100vh; */
+  height: 100vh;
 }
 
 form {
@@ -32,7 +32,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* overflow: hidden; */
+  overflow: hidden;
   margin-top: 86px;
 }
 
@@ -125,7 +125,7 @@ button:hover {
   flex-direction: column;
   width: 75%;
   margin-top: 86px;
-  /* overflow: scroll; */
+  overflow: scroll;
 }
 
 .trips-container {
